--- a/index.html
+++ b/index.html
@@ -38,19 +38,20 @@
      <br> <b>New Videos:</b> Every Monday
      <br> <b>Dev Logs:</b> Every Friday
      <br>
-     <br> Another Week, Another Video! I didn't have anything coordinated properly, so I ended up having to do all my recording Saturday and Sunday. 
-      Then stay up late to finish the editing. Even then, I had some extra work to finish this morning before I was satisfied with the Final Video.
-      As made Evident in the Video, I play Old School Runescape, my name is ArtisanHuman! I'm not on very often, buy I'm always happy to hangout or help,
-      just Ping ArtisanBubblegum on the <a href="https://discord.gg/V782kvCh9h" target="_blank">Discord Server!</a>
-      <br> I also play RPG MO, Path of Exile, Book of Travels, and Monster Hunter Rise, about as frequently as I do OSRS.
-      <br> This Friday, I'll have a basic Tutorial level built for EggVenture. And I hope to find a way to make the wall jumping feel more satisfying by then too.
+     <br> Happy Friday!
+      <br> Today, is the newest update for EggVenture! You can checkout the <a href="https://bubblegumstudios.itch.io/the-big-eggventure/devlog/325704/week-1-tutorial" target="_blank">DevLog</a> to see what's new, or <a href="https://bubblegumstudios.itch.io/the-big-eggventure" target="_blank">Play the Game</a> directly.
+      <br> In other news, I plan on releaseing a new animatic on Monday. I got a lot of good feedback on the last one, so I've reduced my scope and worked slower on this one,
+      so that I can focus on things like keeping characters properly scaled, varying my type of shots, and making better use of notes.
+      <br> I would like to alternate between animations and live action videos, as the Live action videos take much less time to produce,
+      this will give me more time to work on animations, develop EggVenture, and keep up with Magic Elevator Quest updates! While I have plenty of material I want to animate,
+      I don't have many ideas for live action videos yet.
      <br>
      <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
      <br>
      <br>
      - Thank You,
      <br> ArtisanBubblegum
-     <br> 13th December 2021</p>
+     <br> 17th December 2021</p>
     <br>
   </body>
   
@@ -107,6 +108,20 @@
     
   <!---
     Archive:
+
+    <br> Another Week, Another Video! I didn't have anything coordinated properly, so I ended up having to do all my recording Saturday and Sunday. 
+     Then stay up late to finish the editing. Even then, I had some extra work to finish this morning before I was satisfied with the Final Video.
+     As made Evident in the Video, I play Old School Runescape, my name is ArtisanHuman! I'm not on very often, buy I'm always happy to hangout or help,
+     just Ping ArtisanBubblegum on the <a href="https://discord.gg/V782kvCh9h" target="_blank">Discord Server!</a>
+     <br> I also play RPG MO, Path of Exile, Book of Travels, and Monster Hunter Rise, about as frequently as I do OSRS.
+     <br> This Friday, I'll have a basic Tutorial level built for EggVenture. And I hope to find a way to make the wall jumping feel more satisfying by then too.
+    <br>
+    <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
+    <br>
+    <br>
+    - Thank You,
+    <br> ArtisanBubblegum
+    <br> 13th December 2021</p>
 
     <br> It's been over a week since I quit my job to make content fulltime. I made a 3 minute animatic, and resumed Magic Elevator Quest.
       I'll admit, I wasn't working as Diligently as I intended, but I've sorted out a more concrete work schedule. You can Expect 
