--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <br>
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/VC-WhugD_ac" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
     <br>
-    <a href="https://questden.org/kusaba/quest/res/978766.html#1017613" target="_blank"> <img width="300" height="300" src="https://questden.org/kusaba/quest/src/160296923204.png" alt="Magic Elevator Quest! Page 49!"></a>
+    <a href="https://questden.org/kusaba/quest/res/978766.html#1017695" target="_blank"> <img width="300" height="300" src="https://questden.org/kusaba/quest/src/160296923204.png" alt="Magic Elevator Quest!"></a>
      <a href="https://bubblegumstudios.itch.io/the-big-eggventure" target="_blank"> <img width="375" height="300" src="/EggIcon.png" alt="Big EggVenture!"></a>
     <br>
     <br>
