--- a/index.html
+++ b/index.html
@@ -38,20 +38,19 @@
      <br> <b>New Videos:</b> Every Monday
      <br> <b>Dev Logs:</b> Every Friday
      <br>
-     <br> Happy Friday!
-      <br> Today, is the newest update for EggVenture! You can checkout the <a href="https://bubblegumstudios.itch.io/the-big-eggventure/devlog/325704/week-1-tutorial" target="_blank">DevLog</a> to see what's new, or <a href="https://bubblegumstudios.itch.io/the-big-eggventure" target="_blank">Play the Game</a> directly.
-      <br> In other news, I plan on releaseing a new animatic on Monday. I got a lot of good feedback on the last one, so I've reduced my scope and worked slower on this one,
-      so that I can focus on things like keeping characters properly scaled, varying my type of shots, and making better use of notes.
-      <br> I would like to alternate between animations and live action videos, as the Live action videos take much less time to produce,
-      this will give me more time to work on animations, develop EggVenture, and keep up with Magic Elevator Quest updates! While I have plenty of material I want to animate,
-      I don't have many ideas for live action videos yet.
+     <br> Hello!
+      <br> Yet another Animatic out! I'm starting to get a feel for the flow of working on these, but it's still feels like a daunting task..
+      Next Monday will be another live action video, I haven't quite settled on an Idea yet, though..
+      <br> Again, the Source Files for the Bone Heist animatics will be released all in one big batch at the end.
+      <br> Friday, I'll be releasing a new Devlog outlining the basic flow I plan for EggVenture. Though this does mean I probably wont have a Game Update
+      ready to release, I'll have something substantial for the next DevLog after.
      <br>
      <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
      <br>
      <br>
      - Thank You,
      <br> ArtisanBubblegum
-     <br> 17th December 2021</p>
+     <br> 20th December 2021</p>
     <br>
   </body>
   
@@ -107,6 +106,21 @@
     
   <!---
     Archive:
+
+    <br> Happy Friday!
+      <br> Today, is the newest update for EggVenture! You can checkout the <a href="https://bubblegumstudios.itch.io/the-big-eggventure/devlog/325704/week-1-tutorial" target="_blank">DevLog</a> to see what's new, or <a href="https://bubblegumstudios.itch.io/the-big-eggventure" target="_blank">Play the Game</a> directly.
+      <br> In other news, I plan on releaseing a new animatic on Monday. I got a lot of good feedback on the last one, so I've reduced my scope and worked slower on this one,
+      so that I can focus on things like keeping characters properly scaled, varying my type of shots, and making better use of notes.
+      <br> I would like to alternate between animations and live action videos, as the Live action videos take much less time to produce,
+      this will give me more time to work on animations, develop EggVenture, and keep up with Magic Elevator Quest updates! While I have plenty of material I want to animate,
+      I don't have many ideas for live action videos yet.
+     <br>
+     <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
+     <br>
+     <br>
+     - Thank You,
+     <br> ArtisanBubblegum
+     <br> 17th December 2021</p>
 
     <br> Another Week, Another Video! I didn't have anything coordinated properly, so I ended up having to do all my recording Saturday and Sunday. 
      Then stay up late to finish the editing. Even then, I had some extra work to finish this morning before I was satisfied with the Final Video.
