--- a/index.html
+++ b/index.html
@@ -38,19 +38,21 @@
      <br> <b>New Videos:</b> Every Monday
      <br> <b>Dev Logs:</b> Every Friday
      <br>
-     <br> Hello!
-      <br> Yet another Animatic out! I'm starting to get a feel for the flow of working on these, but it's still feels like a daunting task..
-      Next Monday will be another live action video, I haven't quite settled on an Idea yet, though..
-      <br> Again, the Source Files for the Bone Heist animatics will be released all in one big batch at the end.
-      <br> Friday, I'll be releasing a new Devlog outlining the basic flow I plan for EggVenture. Though this does mean I probably wont have a Game Update
-      ready to release, I'll have something substantial for the next DevLog after.
+     <br> Merry Christmas!
+      <br> Today marks the proper start of Magic Elevator Quest: Chapter 3. I'll be drawing all the new updates in full color!
+      <br> I also released the current Outline for EggVenture. Everything I have planned, is in there. Though some areas are TBD, like the bosses and Items, I still feel
+      this outline gives a good representation of the core game I envision.
+      <br> I was able to impliment Wall Climbing, and have it adjust movement directions based on camera facing and angle of the wall the egg is on.
+      I by next Friday, I'll have the remaining Four Boons implimented, and I'll get a basic Settings menu made that will allow you to toggle the boons on or off.
+      <br> As for Monday's Video, I'm not sure If I'm going to get something finished by then or not. I've been quite busy preparing for the Holidays..
+      <br> In the Worst Case, I'll have two Videos the following Monday to make up for it!
      <br>
      <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
      <br>
      <br>
      - Thank You,
      <br> ArtisanBubblegum
-     <br> 20th December 2021</p>
+     <br> 24th December 2021</p>
     <br>
   </body>
   
@@ -107,6 +109,20 @@
     
   <!---
     Archive:
+
+     <br> Hello!
+      <br> Yet another Animatic out! I'm starting to get a feel for the flow of working on these, but it's still feels like a daunting task..
+      Next Monday will be another live action video, I haven't quite settled on an Idea yet, though..
+      <br> Again, the Source Files for the Bone Heist animatics will be released all in one big batch at the end.
+      <br> Friday, I'll be releasing a new Devlog outlining the basic flow I plan for EggVenture. Though this does mean I probably wont have a Game Update
+      ready to release, I'll have something substantial for the next DevLog after.
+     <br>
+     <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
+     <br>
+     <br>
+     - Thank You,
+     <br> ArtisanBubblegum
+     <br> 20th December 2021</p>
 
     <br> Happy Friday!
       <br> Today, is the newest update for EggVenture! You can checkout the <a href="https://bubblegumstudios.itch.io/the-big-eggventure/devlog/325704/week-1-tutorial" target="_blank">DevLog</a> to see what's new, or <a href="https://bubblegumstudios.itch.io/the-big-eggventure" target="_blank">Play the Game</a> directly.
