--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <br> I also released the current Outline for EggVenture. Everything I have planned, is in there. Though some areas are TBD, like the bosses and Items, I still feel
       this outline gives a good representation of the core game I envision.
       <br> I was able to impliment Wall Climbing, and have it adjust movement directions based on camera facing and angle of the wall the egg is on.
-      I by next Friday, I'll have the remaining Four Boons implimented, and I'll get a basic Settings menu made that will allow you to toggle the boons on or off.
+      By next Friday, I'll have the remaining Four Boons implimented, and I'll get a basic Settings menu made that will allow you to toggle the boons on or off.
       <br> As for Monday's Video, I'm not sure If I'm going to get something finished by then or not. I've been quite busy preparing for the Holidays..
       <br> In the Worst Case, I'll have two Videos the following Monday to make up for it!
      <br>
