--- a/index.html
+++ b/index.html
@@ -72,14 +72,21 @@
     const material = new THREE.MeshBasicMaterial( { color: 0x774659 } );
     const cube = new THREE.Mesh( geometry, material );
     scene.add( cube );
+    const geo2 = new THREE.TorusGeometry( 7, 1, 8, 50);
+    const cube2 = new THREE.Mesh( geo2, material );
+    scene.add( cube2 );
+    cube2.positon.z = -100;
     
     camera.position.z = 5;
         
     function animate() {
       requestAnimationFrame( animate );
       cube.position.z += -0.01;
+      cube2.position.z += 0.01;
       cube.rotation.x += -0.001;
+      cube2.rotation.x += 0.001;
       cube.rotation.y += 0.003;
+      cube2.rotation.y += -0.003
       renderer.render( scene, camera );
     }
     animate();
