--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     const geo2 = new THREE.TorusGeometry( 7, 1, 8, 50);
     const cube2 = new THREE.Mesh( geo2, material );
     scene.add( cube2 );
-    cube2.positon.z = -100;
+    cube2.position.z = -100;
     
     camera.position.z = 5;
         
