--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
   --->
   
   <a href="https://docs.google.com/spreadsheets/d/1zw6q7MESRTBlL4qTPROcPNTCXEHY7pKUGD40a5AW51Q/edit?usp=sharing" target="_blank">RPGMO Fish Cooking Calculator</a>
+  <br> <a href="https://docs.google.com/document/d/11adYWi_i4N6jWiewmhkagBnz2iLZAbNIndmGJwWJ1G4/edit?usp=sharing" target="_blank">DnD 5e Better Samurai Class</a>
   
   <!--- Post Loading Scripts --->
   <script type="text/javascript">cookieStart();</script>
