--- a/index.html
+++ b/index.html
@@ -38,14 +38,10 @@
      <br> <b>New Videos:</b> Every Monday
      <br> <b>Dev Logs:</b> Every Friday
      <br>
-     <br> Merry Christmas!
-      <br> Today marks the proper start of Magic Elevator Quest: Chapter 3. I'll be drawing all the new updates in full color!
-      <br> I also released the current Outline for EggVenture. Everything I have planned, is in there. Though some areas are TBD, like the bosses and Items, I still feel
-      this outline gives a good representation of the core game I envision.
-      <br> I was able to impliment Wall Climbing, and have it adjust movement directions based on camera facing and angle of the wall the egg is on.
-      By next Friday, I'll have the remaining Four Boons implimented, and I'll get a basic Settings menu made that will allow you to toggle the boons on or off.
-      <br> As for Monday's Video, I'm not sure If I'm going to get something finished by then or not. I've been quite busy preparing for the Holidays..
-      <br> In the Worst Case, I'll have two Videos the following Monday to make up for it!
+     <br> Happy New Year Eve!
+      <br> Today is the last day of 2021! Oh well.
+      <br> The new Update for EggVenture features all 5 of the Power Ups I plan to build levels around. You can read the <a href="https://bubblegumstudios.itch.io/the-big-eggventure/devlog/330489/week-3-elements" target="_blank">DevLog here.</a> 
+      <br> I have a Side Job I'll be busy with this weekend, but I should still have a Video to post on Monday. Maybe not the two videos I hoped to post.
      <br>
      <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
      <br>
@@ -116,6 +112,22 @@
     
   <!---
     Archive:
+
+    <br> Merry Christmas!
+      <br> Today marks the proper start of Magic Elevator Quest: Chapter 3. I'll be drawing all the new updates in full color!
+      <br> I also released the current Outline for EggVenture. Everything I have planned, is in there. Though some areas are TBD, like the bosses and Items, I still feel
+      this outline gives a good representation of the core game I envision.
+      <br> I was able to impliment Wall Climbing, and have it adjust movement directions based on camera facing and angle of the wall the egg is on.
+      By next Friday, I'll have the remaining Four Boons implimented, and I'll get a basic Settings menu made that will allow you to toggle the boons on or off.
+      <br> As for Monday's Video, I'm not sure If I'm going to get something finished by then or not. I've been quite busy preparing for the Holidays..
+      <br> In the Worst Case, I'll have two Videos the following Monday to make up for it!
+     <br>
+     <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
+     <br>
+     <br>
+     - Thank You,
+     <br> ArtisanBubblegum
+     <br> 24th December 2021</p>
 
      <br> Hello!
       <br> Yet another Animatic out! I'm starting to get a feel for the flow of working on these, but it's still feels like a daunting task..
