--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
      <br>
      - Thank You,
      <br> ArtisanBubblegum
-     <br> 24th December 2021</p>
+     <br> 31st December 2021</p>
     <br>
   </body>
   
