--- a/index.html
+++ b/index.html
@@ -35,20 +35,26 @@
     </h2>
     <p id="p1">
      <br> <b>Comic Updates:</b> Monday - Friday
-     <br> <b>New Videos:</b> Every Monday
      <br> <b>Dev Logs:</b> Every Friday
+     <br> <b>New Videos:</b> UnScheduled
      <br>
-     <br> Happy New Year Eve!
-      <br> Today is the last day of 2021! Oh well.
-      <br> The new Update for EggVenture features all 5 of the Power Ups I plan to build levels around. You can read the <a href="https://bubblegumstudios.itch.io/the-big-eggventure/devlog/330489/week-3-elements" target="_blank">DevLog here.</a> 
-      <br> I have a Side Job I'll be busy with this weekend, but I should still have a Video to post on Monday. Maybe not the two videos I hoped to post.
+     <br> Happy New Year!
+      <br> I Quit my Job in November, and started Full Time Content Creation in December. I've never had the freedom to build my own schedule before,
+      and a Month into this, I can better reflect on what is working, and what is not working.
+      <br> I'm very happy with the progress we've made in Magic Elevator Quest. Between the Freedome to schedule my time and energy, and the Upload Schedule,
+      I've been considerably more diligent with updates! I've also notice there are a few people that consistantly reply to my posts. I find this to be Fulfilling and Manageable.
+      <br> The Weekly Devlogs, have also been a huge boon for me. Not only do they help my to stay diligent about working, they also help me to maintain direction,
+      plan out my workflow, and keep the scope of my work well managed. Though I don't have a following for my games, I'm making these games for myself, so they are their own reward.
+      <br> I have struggled to keep up with the Video Uploads. Though I am happy with the videos I've released, I can't help but feel like they could have been better.
+      The Monday Deadline, has made me feel more stressed out. and When I miss it, It feels very demotivating. For These reasons, I am not guaranteeing Video Updats on any set schedule.
+      <br> My work Schedule will remain the same, so I will continue to work on Videos/Animations, but I will now do so without the stress of a Deadline. This will help me to release better video content.
      <br>
      <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
      <br>
      <br>
      - Thank You,
      <br> ArtisanBubblegum
-     <br> 31st December 2021</p>
+     <br> 2nd January 2022</p>
     <br>
   </body>
   
@@ -112,6 +118,18 @@
     
   <!---
     Archive:
+
+     <br> Happy New Year Eve!
+      <br> Today is the last day of 2021! Oh well.
+      <br> The new Update for EggVenture features all 5 of the Power Ups I plan to build levels around. You can read the <a href="https://bubblegumstudios.itch.io/the-big-eggventure/devlog/330489/week-3-elements" target="_blank">DevLog here.</a> 
+      <br> I have a Side Job I'll be busy with this weekend, but I should still have a Video to post on Monday. Maybe not the two videos I hoped to post.
+     <br>
+     <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
+     <br>
+     <br>
+     - Thank You,
+     <br> ArtisanBubblegum
+     <br> 31st December 2021</p>
 
     <br> Merry Christmas!
       <br> Today marks the proper start of Magic Elevator Quest: Chapter 3. I'll be drawing all the new updates in full color!
