--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <p id="p1">
      <br> <b>Comic Updates:</b> Monday - Friday
      <br> <b>Dev Logs:</b> Every Friday
-     <br> <b>New Videos:</b> UnScheduled
+     <br> <b>New Videos:</b> As Completed
      <br>
      <br> Happy New Year!
       <br> I Quit my Job in November, and started Full Time Content Creation in December. I've never had the freedom to build my own schedule before,
