--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
         {
           cube4.position.z = 0;
         }
-      <!--- cube.rotation.x += -0.001;
-      cube2.rotation.x += 0.001;
-      cube.rotation.y += 0.003;
-      cube2.rotation.y += -0.003
-      renderer.render( scene, camera ); --->
+      cube.rotation.x += -0.000;
+      cube2.rotation.x += 0.000;
+      cube.rotation.y += 0.000;
+      cube2.rotation.y += -0.000;
+      renderer.render( scene, camera );
     }
     animate();
   </script>
