--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     {
       let x = makeCube();
       scene.add( x.mesh );
-      x.position.z = i * 50;
+      x.mesh.position.z = i * 50;
       cubelist.push(x);
     }
     
