--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     function animate() {
       requestAnimationFrame( animate );
       
-      cubelist.foreach( b => b.update());
+      cubelist.forEach( b => b.update());
       
       renderer.render( scene, camera );
     }
