--- a/index.html
+++ b/index.html
@@ -34,23 +34,25 @@
       <a href="https://discord.gg/V782kvCh9h" target="_blank">Discord</a> |
     </h2>
     <p id="p1">
-     <br> <b>Comic Updates:</b> Monday - Friday
-     <br> <b>Dev Logs:</b> Every Friday
+     <br> <b>WebComic: Magic Elevator Quest:</b> <a href="https://questden.org/kusaba/quest/res/1018225.html#1018225" target="_blank"> Page 78 </a>
+     <br> <b>Game: The Big EggVenture:</b> <a href="https://bubblegumstudios.itch.io/the-big-eggventure" target="_blank"> Devlog #10 </a>
      <br> <b>New Videos:</b> As Completed
      <br>
-     <br> Happy New Year!
-      <br> I Quit my Job in November, and started Full Time Content Creation in December. I've never had the freedom to build my own schedule before,
-      and a Month into this, I can better reflect on what is working, and what is not working.
-      <br> I'm very happy with the progress we've made in Magic Elevator Quest. With the Freedom to schedule my time and energy,
-      I've been considerably more diligent with updates! I've also noticed there are a few people that consistantly reply to my posts. I find this to be Fulfilling and Manageable.
-      <br>
-      <br> The Weekly Devlogs, have also been a huge boon for me. Not only do they help my to stay diligent about working, they also help me to maintain direction,
-      plan out my workflow, and keep the scope of my work well managed. Though I don't have a following for my games, I'm making these games for myself, so they are their own reward.
-      <br>
-      <br> I have struggled to keep up with the Video Uploads. Though I am happy with the videos I've released, I can't help but feel like they could have been better.
-      The Monday Deadline, has made me feel more stressed out. and When I miss it, It feels very demotivating. For These reasons, I am not guaranteeing Video Updats on any set schedule.
-      <br>
-      <br> My work Schedule will remain the same, so I will continue to work on Videos/Animations, but I will now do so without the stress of a Deadline. This will help me to release better video content.
+     <br> Uh, Merry March?
+      <br> Back in January, I had some realizations on the realities of Creativity as a Product.
+      <br> Last month, (Febuary), I fell into a 'low energy' state, and barely got anything done. I spent a lot of time thinking about what I really want to do, and why I'm
+      trying to build this kind of Career.
+      <br> Survival is an Obligation that every living creature must contend with, typically, the things we do to stay alive are not enjoyable. For most creatures, eating is purely
+      a thing they do to deal with hunger. As humans, we're in a unique position to mitigate the Hastle of these obligations, as well as to find enjoyment in Non-Obligatory activities.
+      <br> When I left Service Masters last November, I set out to persue my own Creative Projects. Quickly though, I realized that nobody really cares about the things I 
+      want to make. (At least not enough to Support me Financially.) So I talked with my friends on the DawnSomewhere Discord, and they helped me to figure out how to 
+      sell my art skill as a product. (Specific shoutout to PBn) this turned out to be pretty effective, though it wasn't enough to support myself on, It was finally an Income
+      from a creative persuit.
+      <br> The added workload of doing commissions, creeped into the time I would spend on other projects, and I was no longer able to keep pace with my goals. This was disheartening,
+      but I resolved that income was the more important thing to persue currently. Creative Freedom could come once I've built a Supportive Community around myself. This was similar to
+      my line of thinking at work, "Once I build a robust retirement account, I'll have the freedom to work on the projects that bring me Meaningfulness."
+      <br> In Febuary, I thought about these kinds of things. And what I realy want, "What is my Best Life?"
+      <br> I want to make stories, and develope games, with as little hastle as possible.
      <br>
      <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
      <br>
@@ -143,6 +145,28 @@
     
   <!---
     Archive:
+
+     <br> Happy New Year!
+      <br> I Quit my Job in November, and started Full Time Content Creation in December. I've never had the freedom to build my own schedule before,
+      and a Month into this, I can better reflect on what is working, and what is not working.
+      <br> I'm very happy with the progress we've made in Magic Elevator Quest. With the Freedom to schedule my time and energy,
+      I've been considerably more diligent with updates! I've also noticed there are a few people that consistantly reply to my posts. I find this to be Fulfilling and Manageable.
+      <br>
+      <br> The Weekly Devlogs, have also been a huge boon for me. Not only do they help my to stay diligent about working, they also help me to maintain direction,
+      plan out my workflow, and keep the scope of my work well managed. Though I don't have a following for my games, I'm making these games for myself, so they are their own reward.
+      <br>
+      <br> I have struggled to keep up with the Video Uploads. Though I am happy with the videos I've released, I can't help but feel like they could have been better.
+      The Monday Deadline, has made me feel more stressed out. and When I miss it, It feels very demotivating. For These reasons, I am not guaranteeing Video Updats on any set schedule.
+      <br>
+      <br> My work Schedule will remain the same, so I will continue to work on Videos/Animations, but I will now do so without the stress of a Deadline. This will help me to release better video content.
+     <br>
+     <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
+     <br>
+     <br>
+     - Thank You,
+     <br> ArtisanBubblegum
+     <br> 2nd January 2022</p>
+    <br>
 
      <br> Happy New Year Eve!
       <br> Today is the last day of 2021! Oh well.
