--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       function update()
       {
         mesh.position.z += -0.01;
-        mesh.scale = new Vector3(1,1,1);
+        mesh.scale = new THREE.Vector3(1,1,1);
         if (mesh.position.z <= meshNumber * meshDis)
         {
           mesh.position.z = 0;
