--- a/index.html
+++ b/index.html
@@ -34,28 +34,25 @@
      <br> <b>Game: The Big EggVenture:</b> <a href="https://bubblegumstudios.itch.io/the-big-eggventure" target="_blank"> Devlog #10 </a>
      <br> <b>New Videos:</b> As Completed
      <br>
-     <br> Uh, Merry March?
-      <br> Back in January, I had some realizations on the realities of Creativity as a Product.
-      <br> Last month, (Febuary), I fell into a 'low energy' state, and barely got anything done. I spent a lot of time thinking about what I really want to do, and why I'm
-      trying to build this kind of Career.
-      <br> Survival is an Obligation that every living creature must contend with, typically, the things we do to stay alive are not enjoyable. For most creatures, eating is purely
-      a thing they do to deal with hunger. As humans, we're in a unique position to mitigate the Hastle of these obligations, as well as to find enjoyment in Non-Obligatory activities.
-      <br> When I left Service Masters last November, I set out to persue my own Creative Projects. Quickly though, I realized that nobody really cares about the things I 
-      want to make. (At least not enough to Support me Financially.) So I talked with my friends on the DawnSomewhere Discord, and they helped me to figure out how to 
-      sell my art skill as a product. (Specific shoutout to PBn) this turned out to be pretty effective, though it wasn't enough to support myself on, It was finally an Income
-      from a creative persuit.
-      <br> The added workload of doing commissions, creeped into the time I would spend on other projects, and I was no longer able to keep pace with my goals. This was disheartening,
-      but I resolved that income was the more important thing to persue currently. Creative Freedom could come once I've built a Supportive Community around myself. This was similar to
-      my line of thinking at work, "Once I build a robust retirement account, I'll have the freedom to work on the projects that bring me Meaningfulness."
-      <br> In Febuary, I thought about these kinds of things. And what I realy want, "What is my Best Life?"
-      <br> I want to make stories, and develope games, with as little hastle as possible.
+     <br> HAPPY SPRING!
+      Two day ago, (16th March), Was the first day of Spring! I don't care what the Calendar Says, I can feel it in my Muscles. Some people are Extroverted,
+      and some would describe me as Introverted, but In Reality, I'm Helioverted! There's nothing like being outside, in the Sunlight, on a Hot Day.
+      <br> The last couple months have been pretty rough, but all things considered, I pretty happy with the work I produced, and the things I've learned.
+      Originally, I had budgeted for me to work on these projects until the end of March. Though I have plenty of money to support myself for the next couple months,
+      I find myself in need of a more substantial income.
+      <br> To that end, I am currently looking for a Part Time Job. Ideally, I'd like to work full time on Art and Games, but a job is the most efficient way to facilitate
+      the acquisition of basic needs.
+      <br>
+      <br> Aside from that, I've been working on a Comicbook. When completed, it will be freely available to read online, Patrons of my Patreon will have access to
+      the Source Files, and I'll be selling Physical Copies for you to perform strange rituals on. 
+      <br> If you're interested in the development of this Comic, I occasionally post rough pages on my <a href="https://discord.gg/V782kvCh9h" target="_blank">Discord Server</a>.
      <br>
      <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
      <br>
      <br>
      - Thank You,
      <br> ArtisanBubblegum
-     <br> 2nd January 2022</p>
+     <br> 18th March 2022</p>
     <br>
   </body>
   
@@ -142,6 +139,30 @@
     
   <!---
     Archive:
+
+     <br> Uh, Merry March?
+      <br> Back in January, I had some realizations on the realities of Creativity as a Product.
+      <br> Last month, (Febuary), I fell into a 'low energy' state, and barely got anything done. I spent a lot of time thinking about what I really want to do, and why I'm
+      trying to build this kind of Career.
+      <br> Survival is an Obligation that every living creature must contend with, typically, the things we do to stay alive are not enjoyable. For most creatures, eating is purely
+      a thing they do to deal with hunger. As humans, we're in a unique position to mitigate the Hastle of these obligations, as well as to find enjoyment in Non-Obligatory activities.
+      <br> When I left Service Masters last November, I set out to persue my own Creative Projects. Quickly though, I realized that nobody really cares about the things I 
+      want to make. (At least not enough to Support me Financially.) So I talked with my friends on the DawnSomewhere Discord, and they helped me to figure out how to 
+      sell my art skill as a product. (Specific shoutout to PBn) this turned out to be pretty effective, though it wasn't enough to support myself on, It was finally an Income
+      from a creative persuit.
+      <br> The added workload of doing commissions, creeped into the time I would spend on other projects, and I was no longer able to keep pace with my goals. This was disheartening,
+      but I resolved that income was the more important thing to persue currently. Creative Freedom could come once I've built a Supportive Community around myself. This was similar to
+      my line of thinking at work, "Once I build a robust retirement account, I'll have the freedom to work on the projects that bring me Meaningfulness."
+      <br> In Febuary, I thought about these kinds of things. And what I realy want, "What is my Best Life?"
+      <br> I want to make stories, and develope games, with as little hastle as possible.
+     <br>
+     <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
+     <br>
+     <br>
+     - Thank You,
+     <br> ArtisanBubblegum
+     <br> 5th March 2022</p>
+    <br>
 
      <br> Happy New Year!
       <br> I Quit my Job in November, and started Full Time Content Creation in December. I've never had the freedom to build my own schedule before,
