--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
      <br> HAPPY SPRING!
       <br> Two day ago, (16th March), Was the first day of Spring! I don't care what the Calendar Says, I can feel it in my Muscles. Some people are Extroverted,
       and some would describe me as Introverted, but In Reality, I'm Helioverted! There's nothing like being outside, in the Sunlight, on a Hot Day.
-      <br> The last couple months have been pretty rough, but all things considered, I pretty happy with the work I produced, and the things I've learned.
+      <br> The last couple months have been pretty rough, but all things considered, I'm pretty happy with the work I produced, and the things I've learned.
       Originally, I had budgeted for me to work on these projects until the end of March. Though I have plenty of money to support myself for the next couple months,
       I find myself in need of a more substantial income.
       <br> To that end, I am currently looking for a Part Time Job. Ideally, I'd like to work full time on Art and Games, but a job is the most efficient way to facilitate
