--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       the Source Files, and I'll be selling Physical Copies for you to perform strange rituals on. 
       <br> If you're interested in the development of this Comic, I occasionally post rough pages on my <a href="https://discord.gg/V782kvCh9h" target="_blank">Discord Server</a>.
      <br>
-     <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
+     <br> My Creations are made possible by your Support!
      <br>
      <br>
      - Thank You,
