--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
      <br> <b>New Videos:</b> As Completed
      <br>
      <br> HAPPY SPRING!
-      <br> Two day ago, (16th March), Was the first day of Spring! I don't care what the Calendar Says, I can feel it in my Muscles. Some people are Extroverted,
+      <br> Two days ago, (16th March), Was the first day of Spring! I don't care what the Calendar Says, I can feel it in my Muscles. Some people are Extroverted,
       and some would describe me as Introverted, but In Reality, I'm Helioverted! There's nothing like being outside, in the Sunlight, on a Hot Day.
       <br> The last couple months have been pretty rough, but all things considered, I'm pretty happy with the work I produced, and the things I've learned.
       Originally, I had budgeted for me to work on these projects until the end of March. Though I have plenty of money to support myself for the next couple months,
