--- a/archive.html
+++ b/archive.html
@@ -34,6 +34,7 @@
      <br> <b>Game: The Big EggVenture:</b> <a href="https://bubblegumstudios.itch.io/the-big-eggventure" target="_blank"> Devlog #10 </a>
      <br> <b>New Videos:</b> As Completed
      <br>
+      
      <br> HAPPY SPRING!
       <br> Two days ago, (16th March), Was the first day of Spring! I don't care what the Calendar Says, I can feel it in my Muscles. Some people are Extroverted,
       and some would describe me as Introverted, but In Reality, I'm Helioverted! There's nothing like being outside, in the Sunlight, on a Hot Day.
@@ -52,7 +53,7 @@
      <br>
      - Thank You,
      <br> ArtisanBubblegum
-     <br> 18th March 2022</p>
+     <br> 18th March 2022
     <br>
     
      <br>
@@ -80,7 +81,7 @@
      <br>
      - Thank You,
      <br> ArtisanBubblegum
-     <br> 5th March 2022</p>
+     <br> 5th March 2022
     <br>
 
      <br>
@@ -106,7 +107,7 @@
      <br>
      - Thank You,
      <br> ArtisanBubblegum
-     <br> 2nd January 2022</p>
+     <br> 2nd January 2022
     <br>
 
      <br>
@@ -123,7 +124,7 @@
      <br>
      - Thank You,
      <br> ArtisanBubblegum
-     <br> 31st December 2021</p>
+     <br> 31st December 2021
 
      <br>
      <br>
@@ -143,7 +144,7 @@
      <br>
      - Thank You,
      <br> ArtisanBubblegum
-     <br> 24th December 2021</p>
+     <br> 24th December 2021
 
      <br>
      <br>
@@ -161,7 +162,7 @@
      <br>
      - Thank You,
      <br> ArtisanBubblegum
-     <br> 20th December 2021</p>
+     <br> 20th December 2021
 
      <br>
      <br>
@@ -180,7 +181,7 @@
      <br>
      - Thank You,
      <br> ArtisanBubblegum
-     <br> 17th December 2021</p>
+     <br> 17th December 2021
 
      <br>
      <br>
@@ -198,7 +199,7 @@
     <br>
     - Thank You,
     <br> ArtisanBubblegum
-    <br> 13th December 2021</p>
+    <br> 13th December 2021
 
      <br>
      <br>
@@ -216,14 +217,14 @@
      <br>
      - Thank You,
      <br> ArtisanBubblegum
-     <br> 6th December 2021</p>
+     <br> 6th December 2021
     <br>
 
      <br>
      <br>
      <br>
 
-      <p id="archiveP"> As of December 6th 2021, the new Schedule will be put into place!
+      <br> As of December 6th 2021, the new Schedule will be put into place!
        <br> <b>Comic Updates:</b> Monday - Friday
        <br> <b>New Videos:</b> Every Monday
        <br> <b>Dev Logs:</b> Every Friday
