--- a/index.html
+++ b/index.html
@@ -34,25 +34,7 @@
      <br> <b>Game: The Big EggVenture:</b> <a href="https://bubblegumstudios.itch.io/the-big-eggventure" target="_blank"> Devlog #10 </a>
      <br> <b>New Videos:</b> As Completed
      <br>
-     <br> HAPPY SPRING!
-      <br> Two days ago, (16th March), Was the first day of Spring! I don't care what the Calendar Says, I can feel it in my Muscles. Some people are Extroverted,
-      and some would describe me as Introverted, but In Reality, I'm Helioverted! There's nothing like being outside, in the Sunlight, on a Hot Day.
-      <br> The last couple months have been pretty rough, but all things considered, I'm pretty happy with the work I produced, and the things I've learned.
-      Originally, I had budgeted for me to work on these projects until the end of March. Though I have plenty of money to support myself for the next couple months,
-      I find myself in need of a more substantial income.
-      <br> To that end, I am currently looking for a Part Time Job. Ideally, I'd like to work full time on Art and Games, but a job is the most efficient way to facilitate
-      the acquisition of basic needs.
-      <br>
-      <br> Aside from that, I've been working on a Comicbook. When completed, it will be freely available to read online, Patrons of my Patreon will have access to
-      the Source Files, and I'll be selling Physical Copies for you to perform strange rituals on. 
-      <br> If you're interested in the development of this Comic, I occasionally post rough pages on my <a href="https://discord.gg/V782kvCh9h" target="_blank">Discord Server</a>.
-     <br>
-     <br> My Creations are made possible by your Support!
-     <br>
-     <br>
-     - Thank You,
-     <br> ArtisanBubblegum
-     <br> 18th March 2022</p>
+     <br><img src="/Crundis 001.png"></p>
     <br>
   </body>
   
